--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "friendsofsymfony/rest-bundle": "^3.7",
         "jenssegers/mongodb": "^4.4",
         "mongodb/mongodb": "^1.19",
+        "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "symfony/asset": "7.1.*",
