ADD_README/MODIFY_CORS/UPDATE_ROUTES

--- a/.env
+++ b/.env
@@ -29,7 +29,8 @@ APP_SECRET=6f0587de3a80a2929188b4359b3ede0c
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 MONGODB_DB=todo-app
-MONGODB_URL=mongodb://mongo:27017
+# Replace the container name ( mongo ) with localhost if you're not using docker.
+MONGODB_URL=mongodb://localhost:27017
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
