--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,11 +1,11 @@
 nelmio_cors:
     defaults:
         allow_credentials: false
-        allow_origin: []
-        allow_headers: []
-        allow_methods: []
+        allow_origin: ['*']
+        allow_headers: ['X-Custom-Auth']
+        allow_methods: ['POST', 'PUT', 'GET', 'DELETE','PATCH']
         expose_headers: []
-        max_age: 0
+        max_age: 3600
         hosts: []
         origin_regex: false
         forced_allow_origin_value: ~
